<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gestion Escuela</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="server">Servidor</string>
    <string name="user_name">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="button_connect">Conectarse</string>
    <string name="title_activity_service_list">Gestion Escuela</string>
    <string name="service_list_title">Usuario</string>
    <string name="title_activity_actions_list">ActionsListActivity</string>
    <string name="actionlist_title">Action List</string>
    <string name="List_Students">Datos de Alumnos</string>
    <string name="title_activity_students_list">Listado de Alumnos</string>
    <string name="title_activity_mostrar_alumno">MostrarAlumnoActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_datos_alumno">Datos del Alumno</string>
    <string name="alumno_nombre_label">Nombre:</string>
    <string name="apellido_nombre_label">Apellido:</string>
    <string name="alumno_dni_label">DNI:</string>
    <string name="textView_alumno_fechaNac_label">Nacido:</string>
    <string name="checkBox_savePassword">Guardar Contraseña</string>
    <string name="tomar_asistencia">Tomar Asistencia</string>
    <string name="cargar_notas">Cargar Calificaciones</string>
    <string name="reportar_evento">Reportar Evento</string>
    <string name="cursos">Cursos</string>
    <string name="button_alumno_ir_alcurso">Ir al Curso</string>
    <string name="alumno_ver_direccion">Ver Domicilio</string>
    <string name="alumno_ver_legajo">Ver Legajo</string>
    <string name="title_activity_ayuda_settings">Ayuda Settings</string>
    <string name="main_usuario">usuario</string>

</resources>
